# quitNic

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend.yml  deploy.yml  ios.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_used_nicotine.py
backend/app/: main.py  models.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py  rate_limit.py  security.py
backend/app/services/: coaching.py  transcription.py
backend/quitnic_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: start-dev.sh
backend/tests/: conftest.py  test_api.py  test_coaching.py
docs/: api.md  architecture.md  deployment.md  privacy.md  testflight.md  testing.md
infrastructure/: app-runner-rds.yml
ios/: project.yml
ios/QuitNic/: Info.plist
ios/QuitNic.xcodeproj/: project.pbxproj
ios/QuitNic/App/: QuitNicApp.swift
ios/QuitNic/Models/: LocalModels.swift
ios/QuitNic/Networking/: APIClient.swift  APIModels.swift
ios/QuitNic/Services/: KeychainStore.swift  NotificationService.swift  OutboxService.swift  ProgressCalculator.swift  ResponseCache.swift
ios/QuitNic/ViewModels/: CoachingViewModel.swift
ios/QuitNic/Views/: CheckInView.swift  CoachingView.swift  DashboardView.swift  OnboardingView.swift  (+4 more)
ios/QuitNicTests/: APIClientTests.swift  OutboxServiceTests.swift  ProgressCalculatorTests.swift  RescueSessionTests.swift  ResponseCacheTests.swift
ios/QuitNicUITests/: QuitNicUITests.swift
(+1 files in other folders)
